Fixed overflow display issue

--- a/src/modules/app/components/side-nav/side-nav.styles.less
+++ b/src/modules/app/components/side-nav/side-nav.styles.less
@@ -103,7 +103,11 @@
 
   .SideNav__stat-value {
     color: @color-white;
+    max-width: 120px;
+    overflow: hidden;
     padding-left: 0.5rem;
+    text-overflow: ellipsis;
+    vertical-align: top;
   }
 
   .SideName__placement {
